Lint i18n